# cpp_logic_simulation

./: 1_bit_register_demo.cpp  4_bit_counter_demo  4_bit_counter_demo.cpp  CMakeLists.txt  README.md  container_speed_comparison.cpp  data.txt  game_of_life_cell_demo.cpp  gol_cell_descision_demo.cpp  gol_cell_sibling_selector_demo.cpp  jk_ff_aspc_demo.cpp  jk_ff_demo.cpp  makefile  n_bit_counter_aio_demo.cpp  n_bit_counter_asc_demo.cpp  n_bit_counter_c_asc_demo.cpp  n_bit_counter_demo.cpp  n_bit_decoder_demo.cpp  n_bit_register_asc_aio_demo.cpp  n_bit_register_demo.cpp  n_x_1_bit_mux_demo.cpp  n_x_m_bit_mux_demo.cpp  n_x_n_game_of_life_demo  n_x_n_game_of_life_demo.cpp  naked_jk_ff_demo.cpp  really_long_inverter_chain.cpp  simple_ram_demo.cpp  simple_ram_speed_test.cpp  simple_rom_demo.cpp  simple_terminal_demo.cpp  timing_test.cpp  timing_test_2.cpp  timing_test_3.cpp
demos_src/: 1_bit_register_demo.cpp  4_bit_counter_demo.cpp  4_bit_counter_static_demo.cpp  control_panel_demo.cpp  game_of_life_cell_demo.cpp  gol_cell_descision_demo.cpp  gol_cell_sibling_selector_demo.cpp  jk_ff_aspc_demo.cpp  jk_ff_demo.cpp  jk_ff_static_demo.cpp  n_bit_counter_aio_demo.cpp  n_bit_counter_asc_demo.cpp  n_bit_counter_c_asc_demo.cpp  n_bit_counter_demo.cpp  n_bit_decoder_demo.cpp  n_bit_register_asc_aio_demo.cpp  n_bit_register_demo.cpp  n_bit_sr_latch_demo.cpp  n_x_1_bit_mux_demo.cpp  n_x_m_bit_mux_demo.cpp  n_x_n_game_of_life_demo.cpp  naked_jk_ff_demo.cpp  quad_sr_latch_demo.cpp  really_long_inverter_chain.cpp  simple_ram_demo.cpp  simple_ram_redux_speed_test.cpp  sr_latch_demo.cpp  sr_latch_demo_2.cpp  timing_test.cpp  timing_test_3.cpp  timing_test_3_static.cpp  uart_demo.cpp
demos_src/unrevised/: ram_demo.cpp  ram_speed_test.cpp  rom_demo.cpp
sim_doc/: 1_bit_register_demo.md  4_bit_counter_demo.md  jk_ff_demo.md  n_bit_register_demo.md  simple_ram_demo.md  simple_rom_demo.md  simple_terminal_demo.md
sim_src/: c_clock.cpp  c_comp.cpp  c_core.h  c_device.cpp  c_gate.cpp  c_m_engine.cpp  c_probe.cpp  c_sim.cpp  c_structs.h  colors.h  devices.cpp  devices.h  fltk_demo_2.cpp  game_of_life.cpp  game_of_life.h  simple_ram.cpp  simple_ram.h  simple_rom.cpp  simple_rom.h  simple_terminal.cpp  simple_terminal.h  toggle_switches.cpp  toggle_switches.h  utils.cpp  utils.h
sim_src/control_panel/: control_panel.cpp  display.cpp  display.h  panel.cpp  switch.cpp
sim_src/core/: CMakeLists.txt  c_clock.cpp  c_clock.hpp  c_comp.cpp  c_comp.hpp  c_core.h  c_device.cpp  c_device.hpp  c_gate.cpp  c_gate.hpp  c_gates.cpp  c_gates.hpp  c_m_engine.cpp  c_m_engine.hpp  c_monitor.cpp  c_monitor.hpp  c_probe.cpp  c_probe.hpp  c_sim.cpp  c_sim.hpp  c_structs.h  c_structs.hpp
sim_src/core/include/: c_device.hpp  c_gates.hpp  c_monitor.hpp  c_probe.hpp  c_sim.hpp  c_special.hpp  c_structs.hpp
sim_src/core/src/: c_device.cpp  c_gate.cpp  c_gates.cpp  c_monitor.cpp  c_sim.cpp
sim_src/devices/: CMakeLists.txt  devices.cpp  devices.h  jk_ff_static.h  n_bit_sr_latch.cpp  n_bit_sr_latch.h  quad_sr_latch.cpp  quad_sr_latch.h  sr_latch.cpp  sr_latch.h
sim_src/devices/game_of_life/: game_of_life.cpp  game_of_life.h
sim_src/devices/include/: game_of_life.h  n_bit_sr_latch.h
sim_src/devices/src/: devices.cpp  game_of_life.cpp  jk_ff_static.cpp  n_bit_sr_latch.cpp
sim_src/magic_devices/: control_panel.cpp  control_panel.h  simple_ram.cpp  simple_ram.h  simple_ram_redux.cpp  simple_ram_redux.h  simple_rom.cpp  simple_terminal.cpp
sim_src/special_devices/: CMakeLists.txt  ram.cpp  ram.hpp  rom.cpp  rom.hpp  simple_ram.cpp  simple_ram_redux.cpp  simple_ram_redux.hpp  uart.cpp  uart.hpp
sim_src/special_devices/front_panel/: CMakeLists.txt  fp_demo.cpp
sim_src/special_devices/front_panel/include/: fp_components.h
sim_src/special_devices/front_panel/lib/: CMakeLists.txt  fltk_demo_2.cpp
sim_src/special_devices/front_panel/lib/include/: toggle_switches.h
sim_src/special_devices/front_panel/lib/src/: toggle_switches.cpp
sim_src/special_devices/front_panel/src/: fp_components.cpp  front_panel.cpp
sim_src/special_devices/include/: ram.hpp  rom.hpp  uart.hpp
sim_src/special_devices/src/: ram.cpp  rom.cpp  uart.cpp
sim_src/unrevised/: c_m_engine.cpp  c_m_engine.hpp
sim_src/unrevised/control_panel/: main.cpp  panel  panel.h  panel_mgr.cpp  panel_mgr.h  switch.h  switch_bank.cpp  switch_bank.h
sim_src/unrevised/magic_devices/: simple_ram.h  simple_rom.cpp  simple_terminal.cpp  simple_terminal.h
sim_src/unrevised/simple_terminal_client/: terminal_client.c
sim_src/utils/: CMakeLists.txt  colors.h  strnatcmp.cpp  utils.cpp  utils.h
sim_src/utils/include/: strnatcmp.h
void_thread_pool/: CMakeLists.txt  LICENSE  README.md  main.cpp  void_thread_pool.cpp  void_thread_pool.hpp
